[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Elias",email = "1elias.bauer@gmail.com"},
]
dependencies = [
    "pandas>=2.1.4",
    "tqdm>=4.66.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.28.0",
]
